#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(gsa, 2.95, [https://github.com/catwise/GSA/issues])
AM_INIT_AUTOMAKE(gsa, 2.95)

# Checks for programs.
AC_PROG_F77

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)
